--- a/vcweb/static/css/style.css
+++ b/vcweb/static/css/style.css
@@ -166,6 +166,9 @@ col.error {
     src: url('../fonts/entypo.eot'), url('../fonts/entypo.woff'), url('../fonts/entypo.ttf'), url('../fonts/entypo.svg');
 }
 */
-.cell {
-    padding: 0 20px;
+#invite-form {
+    margin-top: 25px;
+    padding-top: 25px;
+    border: 1px solid rgb(204, 204, 204);
+    border-radius: 5px;
 }
