--- a/vcweb/core/templates/forms/base.html
+++ b/vcweb/core/templates/forms/base.html
@@ -10,5 +10,6 @@
 {% block javascript %}
     {{ block.super }}
     {% include "includes/jquery.validate.html" %}
+    {% include 'autocomplete_light/static.html' %}
 {% endblock %}
 
