--- a/vcweb/lighterprints/templates/lighterprints/email/scheduled-activity/group-summary-email.html
+++ b/vcweb/lighterprints/templates/lighterprints/email/scheduled-activity/group-summary-email.html
@@ -3,12 +3,12 @@
 {% if experiment_completed %}
 The experiment is now over. Thank you for participating.
 {% else %}
-You are a member of {{ group_name }}. To participate in this experiment, visit <a href='https://vcweb.asu.edu{{experiment.participant_url}}'>https://vcweb.asu.edu{{experiment.participant_url}}</a>.
+You are a member of {{ group_name }}. To participate in this experiment, visit <a href='https://vcweb.asu.edu{{experiment.participant_url}}'>https://vcweb.asu.edu{{experiment.participant_url}}</a> and login with your experiment email and password.
 {% endif %}
 </p>
 <ul>
-    <li>You earned <b>{{ individual_points }} points</b> and the average points per person in your group was <b>{{ average_points }}</b>.</li>
-    <li>{{ number_of_chat_messages }} chat messages were posted by your group.</li>
+    <li>You earned <b>{{ individual_points }} points</b> and the average points per person in your group was <b>{{ average_points }}</b></li>
+    <li>{{ number_of_chat_messages }} chat messages were posted by your group</li>
     {% if show_rankings %}
     <li>Your group was ranked {{ group_rank}} out of {{ number_of_groups }}</li>
     {% endif %}
@@ -16,11 +16,7 @@ You are a member of {{ group_name }}. To participate in this experiment, visit <
 <hr>
 <p>
 {% if completed %}
-Congratulations! Your group met the goal of {{ threshold }} average points per person.
+Congratulations! Your group reached the target of {{ threshold }} average points per person.
 {% endif %}
 </p>
-{% if not experiment_completed %}
-<p>
-Remember, your group's point totals reset each day at midnight so your group must still earn {{ threshold }} average points per person to increase your chances of winning a prize today.
-</p>
-{% endif %}
+
