--- a/vcweb/lighterprints/templates/lighterprints/email/experiment-registration.html
+++ b/vcweb/lighterprints/templates/lighterprints/email/experiment-registration.html
@@ -22,8 +22,8 @@ credentials:
 You can reset your password at any time at <a href='https://vcweb.asu.edu/accounts/password/reset?email={{ participant.email }}'>https://vcweb.asu.edu/accounts/password/reset</a>
 </p>
 <p>
-The experiment will begin on {{experiment.start_date}} and run for {{experiment.number_of_rounds}} days, ending on
-{{experiment.end_date}}. If your group's average points per person reaches 160 points of carbon footprint savings,
+The experiment will begin on {{experiment.start_date}} at midnight and run for {{experiment.number_of_rounds}} days, ending at
+midnight, {{experiment.end_date}}. If your group's average points per person reaches 160 points of carbon footprint savings,
 everyone in the group will earn 1 extra credit point. Every day your group reaches 160 points will result in 1 extra
 credit point being awarded to each member of your group, so you can earn 5 extra credit points total. 
 </p>
