--- a/vcweb/static/css/style.css
+++ b/vcweb/static/css/style.css
@@ -172,3 +172,10 @@ col.error {
     border: 1px solid rgb(204, 204, 204);
     border-radius: 5px;
 }
+
+.radio{
+    list-style: none;
+}
+.radio li {
+    list-style: none;
+}
